# video-subcriptions-extractor

./: .gitignore  README.md  docker-compose.yml  example.env  pyproject.toml
src/channel_video_extractor/: main.py  ui.py  videos.py
static/: styles.css
templates/: index.html  results.html  single_page.html
